[tool.poetry]
name = "data_structures_and_algorithms"
version = "0.1.0"
description = ""
authors = ["Marcelo Lino <mdslino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
